--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -10,6 +10,11 @@ pre.highlight {
   overflow: scroll;
 }
 
+.highlighter-rouge {
+    color: #337ab7;
+    background-color: #333333;
+}
+
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
 }
