--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -11,8 +11,7 @@ pre.highlight {
 }
 
 .highlighter-rouge {
-    color: #337ab7;
-    background-color: #333333;
+    background-color: #efefef;
 }
 
 code {
