--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -12,6 +12,8 @@ pre.highlight {
 
 .highlighter-rouge {
     background-color: #efefef;
+    padding-left: 7px
+    padding-right: 7px
 }
 
 code {
