--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 
 @import "reset";
 @import "variables";
+@import "ming";
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
