--- a/_sass/_ming.scss
+++ b/_sass/_ming.scss
@@ -1,9 +1,9 @@
 .tags {
   display: inline-block;
-  border: 1px solid $grey-color;
+  border: 1px solid $gray;
   border-radius: .313rem;
   padding: .25rem .625rem;
   margin-right: .125rem;
   margin-bottom: .5rem;
-  border-bottom: 2px solid $grey-color;
+  border-bottom: 2px solid $gray;
 }
