--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,6 @@
 // IMPORTS
 //
 
-@import "ming";
 @import "reset";
 @import "variables";
 
@@ -142,6 +141,16 @@ img {
 
 .clearfix:after {
     clear: both;
+}
+
+.tags {
+  display: inline-block;
+  border: 1px solid $gray;
+  border-radius: .313rem;
+  padding: .25rem .625rem;
+  margin-right: .125rem;
+  margin-bottom: .5rem;
+  border-bottom: 2px solid $gray;
 }
 
 /*********************/
