--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,7 @@
 
     {% include analytics.html %}
     
+    <!-- Back to top button https://github.com/vfeskov/vanilla-back-to-top -->
     <script src="https://unpkg.com/vanilla-back-to-top@7.2.0/dist/vanilla-back-to-top.min.js"></script>
     <script>addBackToTop({
       diameter: 56,
