--- a/style.scss
+++ b/style.scss
@@ -153,6 +153,14 @@ img {
   border-bottom: 2px solid $gray;
 }
 
+.mbtablestyle {
+        border-collapse: collapse;
+
+   > table, td, th {
+        border: 1px solid black;
+        }
+}
+
 /*********************/
 /* LAYOUT / SECTIONS */
 /*********************/
