--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,9 @@
 // IMPORTS
 //
 
+// Import the github style to fix the tables.
+@import "table";
+
 @import "reset";
 @import "variables";
 
@@ -152,41 +155,6 @@ img {
   margin-bottom: .5rem;
   border-bottom: 2px solid $gray;
 }
-
-/*
-.mbtablestyle {
-        border-collapse: collapse;
-
-   > table, td, th {
-        border: 1px solid black;
-        }
-}
-*/
-
-table {
-  padding: 0; }
-  table tr {
-    border-top: 1px solid #cccccc;
-    background-color: white;
-    margin: 0;
-    padding: 0; }
-    table tr:nth-child(2n) {
-      background-color: #f8f8f8; }
-    table tr th {
-      font-weight: bold;
-      border: 1px solid #cccccc;
-      text-align: left;
-      margin: 0;
-      padding: 6px 13px; }
-    table tr td {
-      border: 1px solid #cccccc;
-      text-align: left;
-      margin: 0;
-      padding: 6px 13px; }
-    table tr th :first-child, table tr td :first-child {
-      margin-top: 0; }
-    table tr th :last-child, table tr td :last-child {
-      margin-bottom: 0; }
       
 /*********************/
 /* LAYOUT / SECTIONS */
